--- a/WebAndUI/HTML/II. Tables/Calculator.html
+++ b/WebAndUI/HTML/II. Tables/Calculator.html
@@ -1,12 +1,22 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>
+		Calculator
+	</title>
+		<style type="text/css">
+			table, td, th
+			{
+				border: 0px;
+				padding: 5px;
+				border-spacing: 1px;
+			}
+		</style>
 </head>
 <body>
     <div>
         <form name="Calculator" method="post">
-            <table border="0" cellspacing="1" cellpadding="5">
+            <table>
                 <colgroup>
                     <col style="width:40px" />
                     <col style="width:40px" />
