--- a/WebAndUI/HTML/II. Tables/FreshFruits.html
+++ b/WebAndUI/HTML/II. Tables/FreshFruits.html
@@ -1,7 +1,15 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>
+		Fresh Fruits
+	</title>
+	<style>
+		td
+		{
+			width: 500px;
+		}
+	</style>
 </head>
 <body>
     <div>
@@ -13,7 +21,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td width="500">
+                    <td>
                         In botany, a fruit is a part of a flowering plant that 
                         derives from specific tissues of the flower, one or more 
                         ovaries, and in some cases accessory tissues. Fruits are 
