--- a/WebAndUI/HTML/II. Tables/TableWithLetters.html
+++ b/WebAndUI/HTML/II. Tables/TableWithLetters.html
@@ -1,10 +1,18 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>
+		Table With Letters
+	</title>
+	<style>
+		table,td,th
+		{
+			border: 1px solid black;
+		}
+	</style>
 </head>
 <body>
-    <table border="1">
+    <table>
         <tr>
            <td colspan="3">Title goes here</td>
             <td>A</td> 
