I.HTML in HTML5 style with CSS

--- a/WebAndUI/HTML/I. HTML/Lists/Lists.html
+++ b/WebAndUI/HTML/I. HTML/Lists/Lists.html
@@ -4,15 +4,16 @@
     <title>
         Lists
     </title>
+	<link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
     <div>
         Preceding text
     </div>
-    <ol style="list-style-type:upper-roman">
+    <ol class="UpperRoman">
         <li>
             List item 1
-            <ol style="list-style-type:lower-alpha">
+            <ol class="LowerAlpha">
                 <li>
                     Nested item 1.1
                 </li>
@@ -23,19 +24,19 @@
         </li>
         <li>
             List item 2
-            <ol style="list-style-type:decimal">
+            <ol class="Decimal">
                 <li>
                     Nested item 2.1
                 </li>
                 <li>
                     Nested item 2.2
-                    <ul style="list-style-type:circle">
+                    <ul class="Circle">
                         <li>
                             Nested item 2.2.1
                         </li>
                         <li>
                             Nested item 2.2.2
-                            <ul style="list-style-type:square">
+                            <ul class="Square">
                                 <li>
                                     Nested item 2.2.2.1
                                 </li>
@@ -56,7 +57,7 @@
         </li>
         <li>
             List item 3
-            <ul style="list-style-type:disc">
+            <ul class="Disc">
                 <li>
                     Nested item 3.1
                 </li>
