--- a/WebAndUI/HTML/I. HTML/RunnersHome/RunnersHome.html
+++ b/WebAndUI/HTML/I. HTML/RunnersHome/RunnersHome.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>
-        Runners Home TM
+        Runners Home&trade;
     </title>
 </head>
 <body>
@@ -11,12 +11,14 @@
     </div>
     <div>
         <h1>
-            Welcome to Runners Home<sup>TM</sup>
+            Welcome to Runners Home&trade;
         </h1>
     </div>
     <div>
-        Runners Home <sup>TM</sup> is dedicated to providing you with:
-        <ul style="list-style-type:square">
+		<h2>
+			Runners Home&trade; is dedicated to providing you with:
+		</h2>
+        <ul>
             <li>the most up-to-date information on running races</li>
             <li>the best resources for runners</li>
         </ul>
