--- a/WebAndUI/HTML/I. HTML/Doge/Friends.html
+++ b/WebAndUI/HTML/I. HTML/Doge/Friends.html
@@ -26,7 +26,7 @@
 		</ul>
     </nav>
     <hr />
-    <content>
+    <section>
 		<h2>
             Friends of Doge
         </h2>
@@ -51,6 +51,6 @@
 				yeah, right
 			</dd>
 		</dl>
-    <content>
+    </section>
 </body>
 </html>
