--- a/WebAndUI/HTML/I. HTML/Doge/Info.html
+++ b/WebAndUI/HTML/I. HTML/Doge/Info.html
@@ -26,7 +26,7 @@
 		</ul>
     </nav>
     <hr />
-	<content>
+	<section>
         <h2>
             Welcome to the Doge Social Network
         </h2>
@@ -37,6 +37,6 @@
         <p>
             The Doge Social Network does not take any responsibility for the information found
         </p>
-	</content>
+	</section>
 </body>
 </html>
