--- a/WebAndUI/HTML/I. HTML/Doge/Profile.html
+++ b/WebAndUI/HTML/I. HTML/Doge/Profile.html
@@ -26,12 +26,12 @@
 		</ul>
     </nav>
     <hr />
-    <content>
+    <section>
 		<h2>
             Profile of Doge
         </h2>
 		<hr />
-		<img src="Pictures/Doge.png" alt="Doge" title="Doge" width="140px" />
+		<img src="Pictures/Doge.png" alt="Doge" title="Doge" width="140" />
 		<p class="SmallPading">
 			<span class="Bold">Name</span> : Doge
 		</p>
@@ -44,6 +44,6 @@
 		<p class="SmallPading">
 			<span class="Bold">Area of occupation</span> : Web
 		</p>
-    </content>
+    </section>
 </body>
 </html>
