--- a/WebAndUI/HTML/I. HTML/Doge/Profile.html
+++ b/WebAndUI/HTML/I. HTML/Doge/Profile.html
@@ -9,19 +9,19 @@
 <body>
 	<header>
 		<h1>
-			Doge Social Network
+			Doge Social Network - Profile
 		</h1>
 	</header>
     <nav>
 		<ul>
 			<li>
+				<a href="Home.html">Home</a>
+			</li>
+			<li>
 				<a href="Profile.html">Profile</a>
 			</li>
 			<li>
 				<a href="Friends.html">Friends</a>
-			</li>
-			<li>
-				<a href="Info.html">Additional information</a>
 			</li>
 		</ul>
     </nav>
