--- a/WebAndUI/HTML/II. Tables/TableWithLetters.html
+++ b/WebAndUI/HTML/II. Tables/TableWithLetters.html
@@ -1,44 +1,39 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>
-		Table With Letters
-	</title>
-	<style>
-		table,td,th
-		{
-			border: 1px solid black;
-		}
-	</style>
-</head>
-<body>
-    <table>
-        <tr>
-           <td colspan="3">Title goes here</td>
-            <td>A</td> 
-            <td>B</td>
-        </tr>
-        <tr>
-            <td rowspan="3">C</td>
-            <td>D</td>
-            <td>E</td>
-            <td>F</td>
-            <td>G</td>
-        </tr>
-        <tr>
-            <td>H</td>
-            <td colspan="2">I</td>
-            <td rowspan="2">J</td>
-        </tr>
-        <tr>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
-        </tr>
-        <tr>
-            <td>N</td>
-            <td colspan="4">O</td>
-        </tr>
-    </table>
-</body>
+	<head>
+		<title>
+			Table With Letters
+		</title>
+		<link rel="stylesheet" type="text/css" href="CSS/tableStyle.css" />
+	</head>
+	<body>
+		<table>
+			<tr>
+			   <td colspan="3" class="left">Title goes here</td>
+				<td>A</td> 
+				<td class="right">B</td>
+			</tr>
+			<tr>
+				<td rowspan="3" class="left">C</td>
+				<td>D</td>
+				<td>E</td>
+				<td>F</td>
+				<td class="right">G</td>
+			</tr>
+			<tr>
+				<td>H</td>
+				<td colspan="2">I</td>
+				<td rowspan="2" class="rightBottom">J</td>
+			</tr>
+			<tr>
+				<td>K</td>
+				<td>L</td>
+				<td>M</td>
+			</tr>
+			<tr>
+				<td class="right">N</td>
+				<td colspan="4">O</td>
+			</tr>
+		</table>
+	</body>
 </html>
