--- a/WebAndUI/HTML/II. Tables/DataForm.html
+++ b/WebAndUI/HTML/II. Tables/DataForm.html
@@ -8,21 +8,21 @@
         <form name="DataEntry" method="post" action="#">
             <div>
                 <label for="MemberName">Member name:</label>
-                <input type="text" id="MemberName" value="Enter your name" required />
+                <input type="text" id="MemberName" required />
                 <strong>*req</strong>
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="text" id="email" value="Enter your email" required pattern="\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}\b" />
+                <input type="text" id="email" required pattern="\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}\b" />
                 <strong>*req</strong>
             </div>
             <div>
                 <label for="School">School:</label>
-                <input type="text" id="School" value="Enter your school" required />
+                <input type="text" id="School" required />
                 <strong>*req</strong>
             </div>
             <div>
-                <input type="submit" value="Submit" />
+                <input type="image" src="Pictures/submit.png" width="50" alt="Submit" />
             </div>
         </form>
     </div>
