HTML Forms ready

--- a/WebAndUI/HTML/III. Forms/04. Inventory.html
+++ b/WebAndUI/HTML/III. Forms/04. Inventory.html
@@ -44,7 +44,7 @@
                 <th>
                     <form method="post" action="#" id="UnitePrice">
                         <input type="text" />
-                        <img src="Pictures/stock_standard-filter.png" alt="Filter" />
+                        <input type="image" src="Pictures/stock_standard-filter.png" alt="Filter" />
                     </form>
                 </th>
                 <th>
@@ -55,13 +55,13 @@
                 <th>
                     <form method="post" action="#" id="UnitsInStock">
                         <input type="text" />
-                        <img src="Pictures/stock_standard-filter.png" alt="Filter" />
+                        <input type="image" src="Pictures/stock_standard-filter.png" alt="Filter" />
                     </form>
                 </th>
                 <th>
                     <form method="post" action="#" id="Discountinued">
                         <input type="checkbox" />
-                        <img src="Pictures/stock_standard-filter.png" alt="Filter" />
+                        <input type="image" src="Pictures/stock_standard-filter.png" alt="Filter" />
                     </form>
                 </th>
             </tr>
@@ -71,7 +71,7 @@
                 <td colspan="6">
                     <div id="tableFooterLeft">
                         <form method="post" action="#">
-                            <input type="image" src="Pictures/resultset_first.png" alt="First"/>
+                            <input type="image" src="Pictures/resultset_first.png" alt="First" />
                             <input type="image" src="Pictures/resultset_previous.png" alt="Previous" />
                             <a href="04.%20Inventory.html">1</a>
                             <a href="04.%20Inventory.html">2</a>
@@ -88,7 +88,7 @@
                             <input type="image" src="Pictures/resultset_last.png" alt="Last" />
                         </form>
                     </div>
-                    <div id="tableFooterCenter" >
+                    <div id="tableFooterCenter">
                         <form method="post" action="#">
                             <label for="PageSize">Page size</label>
                             <select id="PageSize">
@@ -113,7 +113,115 @@
                 <td>39</td>
                 <td>
                     <form method="post" action="#">
-                        <input type="checkbox" />
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Chang</td>
+                <td>$19.00</td>
+                <td>24 - 12 oz bottles</td>
+                <td>17</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Aniseed Syrup</td>
+                <td>$10.00</td>
+                <td>12 - 550 ml bottles</td>
+                <td>13</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Chef Anton's Cajun Seasoning</td>
+                <td>$22.00</td>
+                <td>48 - 6 oz jars</td>
+                <td>53</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Chef Anton'a Gumbo Mix</td>
+                <td>$21.35</td>
+                <td>36 boxes</td>
+                <td>0</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" checked="checked" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Grandma's Boysenberry Spread</td>
+                <td>$25.00</td>
+                <td>12 - 8 oz jars</td>
+                <td>120</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Unsle Bob's Organic Dried Pears</td>
+                <td>$30.00</td>
+                <td>12 - 1 lb pkgs.</td>
+                <td>15</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Northwoods Cranberry Sauce</td>
+                <td>$40.00</td>
+                <td>12 - 12 oz jars</td>
+                <td>6</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Mishi Kobe Niku</td>
+                <td>$97.00</td>
+                <td>18 - 500 g pkgs.</td>
+                <td>29</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" checked="checked" />
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Ikura</td>
+                <td>$31.00</td>
+                <td>12 - 200 ml jars</td>
+                <td>31</td>
+                <td>
+                    <form method="post" action="#">
+                        <input type="checkbox" disabled="disabled" />
                     </form>
                 </td>
             </tr>
