--- a/WebAndUI/CSS/II. Presentation/SampleLogoSite.html
+++ b/WebAndUI/CSS/II. Presentation/SampleLogoSite.html
@@ -10,7 +10,7 @@
             <div id="logo-container">
                 <h1>
                     <a href="#">
-                        <img src="images/Sample%20Logo.png" />
+                        <img src="images/Sample%20Logo.png" alt="Logo" />
                     </a>
                 </h1>
             </div>
@@ -79,7 +79,7 @@
                 <p>
                     published by
                     <a href="#">Doncho Minkov</a> on
-                    <time>08-jan-2013</time> at
+                    <time>2013-01-08</time> at
                     <time>14:51</time>
                 </p>
             </footer>
@@ -93,7 +93,7 @@
                 <p>
                     published by
                     <a href="#">Doncho Minkov</a> on
-                    <time>08-jan-2013</time> at
+                    <time>2013-01-08</time> at
                     <time>14:51</time>
                 </p>
             </footer>
@@ -107,7 +107,7 @@
                 <p>
                     published by
                     <a href="#">Doncho Minkov</a> on
-                    <time>08-jan-2013</time> at
+                    <time>2013-01-08</time> at
                     <time>14:51</time>
                 </p>
             </footer>
