--- a/WebAndUI/JS Fundamentals/05. Conditional Statements/02. Check sign.html
+++ b/WebAndUI/JS Fundamentals/05. Conditional Statements/02. Check sign.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>01. Compare two variables</title>
+    <title>02. Check sign</title>
     <link href="styles/js-console.css" rel="stylesheet" />
 </head>
 <body>
@@ -10,6 +10,6 @@
     <button onclick="takeValue()">Submit</button>
     <div id="js-console"></div>
     <script src="scripts/js-console.js"></script>
-    <script src="scripts/01.%20Compare%20two%20variables.js"></script>
+    <script src="scripts/02.%20Check%20sign.js"></script>
 </body>
 </html>
