--- a/WebAndUI/JS Fundamentals/05. Conditional Statements/04. Sort three numbers.html
+++ b/WebAndUI/JS Fundamentals/05. Conditional Statements/04. Sort three numbers.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>01. Compare two variables</title>
+    <title>04. Sort three numbers</title>
     <link href="styles/js-console.css" rel="stylesheet" />
 </head>
 <body>
@@ -10,6 +10,6 @@
     <button onclick="takeValue()">Submit</button>
     <div id="js-console"></div>
     <script src="scripts/js-console.js"></script>
-    <script src="scripts/01.%20Compare%20two%20variables.js"></script>
+    <script src="scripts/04.%20Sort%20three%20numbers.js"></script>
 </body>
 </html>
