--- a/WebAndUI/JS Fundamentals/05. Conditional Statements/05. Say digit.html
+++ b/WebAndUI/JS Fundamentals/05. Conditional Statements/05. Say digit.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>01. Compare two variables</title>
+    <title>05. Say digit</title>
     <link href="styles/js-console.css" rel="stylesheet" />
 </head>
 <body>
-    <label for="tb-number" id="label">Enter first number: </label>
+    <label for="tb-number" id="label">Enter a digit: </label>
     <input id="tb-number" type="text" onkeypress="return takeValueOnEnter(event)" />
     <button onclick="takeValue()">Submit</button>
     <div id="js-console"></div>
     <script src="scripts/js-console.js"></script>
-    <script src="scripts/01.%20Compare%20two%20variables.js"></script>
+    <script src="scripts/05.%20Say%20digit.js"></script>
 </body>
 </html>
