JS UI&DOM test exam

--- a/WebAndUI/HTML/II. Tables/DataForm.html
+++ b/WebAndUI/HTML/II. Tables/DataForm.html
@@ -8,17 +8,17 @@
         <form name="DataEntry" method="post" action="#">
             <div>
                 <label for="MemberName">Member name:</label>
-                <input type="text" id="MemberName" required />
+                <input type="text" id="MemberName" placeholder="Enter your name here" required />
                 <strong>*req</strong>
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="text" id="email" required pattern="\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}\b" />
+                <input type="text" id="email" required pattern="\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}\b" placeholder="Enter your email here />
                 <strong>*req</strong>
             </div>
             <div>
                 <label for="School">School:</label>
-                <input type="text" id="School" required />
+                <input type="text" id="School" required placeholder="Enter your School here" />
                 <strong>*req</strong>
             </div>
             <div>
