JS Apps 2015 fix01

--- a/WebAndUI/JS Apps/03. Web storages/main.html
+++ b/WebAndUI/JS Apps/03. Web storages/main.html
@@ -22,7 +22,8 @@
             <img src="/pics/error.png" alt="" class="third" />
             <img src="/pics/error.png" alt="" class="fourth" />
         </div>
-        <div class="userTrys">Guesses: 0</div>
+        <div class="userTries">Guesses: 0</div>
+        <div class="best-scores">Best Scores</div>
     </div>
 </body>
 </html>
